core-spring-boot-starter: refactor