@@ -2,11 +2,11 @@ package com.pavelshapel.core.spring.boot.starter.impl.converter;
 
 import com.pavelshapel.core.spring.boot.starter.api.util.ClassUtils;
 import lombok.AccessLevel;
+import lombok.NonNull;
 import lombok.SneakyThrows;
 import lombok.experimental.FieldDefaults;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.convert.converter.Converter;
-import org.springframework.lang.NonNull;
 
 @FieldDefaults(level = AccessLevel.PRIVATE)
 public abstract class AbstractConverter<S, T> implements Converter<S, T> {
@@ -15,15 +15,15 @@ public abstract class AbstractConverter<S, T> implements Converter<S, T> {
 
     @Override
     public T convert(@NonNull S source) {
-        T destination = classUtils.getGenericSuperclass(getClass(), 2)
+        T target = classUtils.getGenericSuperclass(getClass(), 2)
                 .map(this::createNewInstance)
                 .orElseThrow(IllegalAccessError::new);
-        classUtils.copyFields(source, destination);
-        return destination;
+        classUtils.copyFields(source, target);
+        return target;
     }
 
     @SneakyThrows
     private T createNewInstance(Class<?> targetClass) {
-        return (T) targetClass.newInstance();
+        return (T) targetClass.getDeclaredConstructor().newInstance();
     }
 }
